Add GitHub repository links for each matrix factorization technique
- K-Means/Spectral Clustering: sklearn.cluster.KMeans, SpectralClustering
- Subspace Clustering: SSC-ADMM (JHU Vision Lab), LRR
- NMF: sklearn.decomposition.NMF, nmflib (Lee & Seung original)
- Matrix Completion: Matrix-Completion-Methods, MatrixCompletion.jl
- Robust PCA: robust-pca, lrslibrary
- Sparse PCA: sklearn.decomposition.SparsePCA, erichson/spca
- Dictionary Learning: sklearn DictionaryLearning, K-SVD toolbox
- Compressive Sensing: CS-algorithms, sparse_recovery, ISTA-Net
- BSS/ICA: sklearn.decomposition.FastICA
- LoRA: microsoft/LoRA (official)
- Autoencoders: sklearn PCA, PyTorch VAE

--- a/index.html
+++ b/index.html
@@ -716,6 +716,8 @@
                     <div class="impl-grid" style="margin-top:1rem">
                         <div class="impl"><a href="https://theory.stanford.edu/~sergei/papers/kMeansPP-soda.pdf" target="_blank"><span class="impl-name">K-Means++</span></a> <span class="impl-info">Arthur, Vassilvitskii &mdash; improved seeding</span></div>
                         <div class="impl"><a href="https://papers.nips.cc/paper/2092-on-spectral-clustering-analysis-and-an-algorithm" target="_blank"><span class="impl-name">Spectral Clustering</span></a> <span class="impl-info">Ng, Jordan, Weiss</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/cluster/_kmeans.py" target="_blank"><span class="impl-name">sklearn.cluster.KMeans</span></a> <span class="impl-info">scikit-learn &mdash; KMeans(n_clusters=k)</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/cluster/_spectral.py" target="_blank"><span class="impl-name">sklearn.cluster.SpectralClustering</span></a> <span class="impl-info">scikit-learn &mdash; graph Laplacian eigenvectors</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
                 <div class="cat-figure">
@@ -739,6 +741,9 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1203.1005" target="_blank"><span class="impl-name">LSR</span></a> <span class="impl-info">Canyi Lu</span></div>
                         <div class="impl"><a href="https://papers.nips.cc/paper/2011/hash/fc490ca45c00b1249bbe3554a4fdf6fb-Abstract.html" target="_blank"><span class="impl-name">SMCE</span></a> <span class="impl-info">Sparse Manifold</span></div>
                         <div class="impl"><a href="https://www.science.org/doi/10.1126/science.290.5500.2323" target="_blank"><span class="impl-name">LLE</span></a> <span class="impl-info">Local Linear Embedding</span></div>
+                        <div class="impl"><a href="https://github.com/JHUVisionLab/SSC-using-ADMM" target="_blank"><span class="impl-name">SSC-ADMM</span></a> <span class="impl-info">JHU Vision Lab &mdash; Elhamifar official</span> <span class="tag mat">Matlab</span></div>
+                        <div class="impl"><a href="https://github.com/stephenbeckr/SSC" target="_blank"><span class="impl-name">SSC (Becker)</span></a> <span class="impl-info">proximal gradient + ADMM variants</span> <span class="tag mat">Matlab</span></div>
+                        <div class="impl"><a href="https://github.com/barbosaaob/lrr" target="_blank"><span class="impl-name">LRR (Python)</span></a> <span class="impl-info">port from Liu's MATLAB</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
                 <div class="cat-figure">
@@ -770,6 +775,9 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1810.01401" target="_blank"><span class="impl-name">Deep Asymmetric NMF</span></a> <span class="impl-info">DAsNMF &mdash; directed graphs</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2304.04734" target="_blank"><span class="impl-name">DANMF-MRL</span></a> <span class="impl-info">Huang et al. 2023 &mdash; autoencoder</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2008.00372" target="_blank"><span class="impl-name">TCMF</span></a> <span class="impl-info">Triple Component MF &mdash; shared+unique+sparse</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/decomposition/_nmf.py" target="_blank"><span class="impl-name">sklearn.decomposition.NMF</span></a> <span class="impl-info">scikit-learn &mdash; Lee &amp; Seung multiplicative updates</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/raleng/nmf" target="_blank"><span class="impl-name">nmf (Python)</span></a> <span class="impl-info">MUR, ANLS, ADMM, AO-ADMM</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/audiofilter/nmflib" target="_blank"><span class="impl-name">nmflib</span></a> <span class="impl-info">Lee &amp; Seung original KL + Euclidean</span> <span class="tag mat">Matlab</span></div>
                     </div>
                 </div>
             </div>
@@ -801,6 +809,8 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1904.12058" target="_blank"><span class="impl-name">IGMC</span></a> <span class="impl-info">Zhang &amp; Chen ICLR 2020 &mdash; GNN inductive</span> <span class="tag py">Python</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2108.11124" target="_blank"><span class="impl-name">IMC-GAE</span></a> <span class="impl-info">2021 &mdash; Graph Autoencoder</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2107.09475" target="_blank"><span class="impl-name">ScaledGD</span></a> <span class="impl-info">nonconvex, near-optimal</span></div>
+                        <div class="impl"><a href="https://github.com/HauLiang/Matrix-Completion-Methods" target="_blank"><span class="impl-name">Matrix-Completion-Methods</span></a> <span class="impl-info">SVT, SVP, TNNR-ADMM</span> <span class="tag mat">Matlab</span></div>
+                        <div class="impl"><a href="https://github.com/bethandtownes/MatrixCompletion.jl" target="_blank"><span class="impl-name">MatrixCompletion.jl</span></a> <span class="impl-info">OptSpace, OR1MP, SVT</span> <span class="tag py">Julia</span></div>
                     </div>
                 </div>
             </div>
@@ -829,6 +839,9 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1702.05698" target="_blank"><span class="impl-name">Online RPCA</span></a> <span class="impl-info">tuning-free via implicit regularization</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2305.02544" target="_blank"><span class="impl-name">Streaming Outlier RPCA</span></a> <span class="impl-info">Diakonikolas et al. 2023 &mdash; near-linear</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1802.05447" target="_blank"><span class="impl-name">History PCA</span></a> <span class="impl-info">streaming, parameter robust</span></div>
+                        <div class="impl"><a href="https://github.com/dganguli/robust-pca" target="_blank"><span class="impl-name">robust-pca</span></a> <span class="impl-info">Cand&egrave;s et al. ADMM implementation</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/dlaptev/RobustPCA" target="_blank"><span class="impl-name">RobustPCA (MATLAB)</span></a> <span class="impl-info">Cand&egrave;s, Wright PCP</span> <span class="tag mat">Matlab</span></div>
+                        <div class="impl"><a href="https://github.com/andrewssobral/lrslibrary" target="_blank"><span class="impl-name">lrslibrary</span></a> <span class="impl-info">Low-Rank + Sparse video tools</span> <span class="tag mat">Matlab</span></div>
                     </div>
                 </div>
                 <div class="cat-figure">
@@ -854,6 +867,8 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1112.2679" target="_blank"><span class="impl-name">24AM</span></a> <span class="impl-info">Richtárik et al.</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/0904.3089" target="_blank"><span class="impl-name">Structured Sparse PCA</span></a> <span class="impl-info">Jenatton, Bach</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1105.0359" target="_blank"><span class="impl-name">FSPCA</span></a> <span class="impl-info">Genevera Allen</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/decomposition/_sparse_pca.py" target="_blank"><span class="impl-name">sklearn.decomposition.SparsePCA</span></a> <span class="impl-info">scikit-learn &mdash; L1 penalty</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/erichson/spca" target="_blank"><span class="impl-name">spca</span></a> <span class="impl-info">Variable Projection &mdash; regular, randomized, robust</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
             </div>
@@ -876,6 +891,10 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1310.2632" target="_blank"><span class="impl-name">BiG-AMP</span></a> <span class="impl-info">Parker et al.</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1407.7600" target="_blank"><span class="impl-name">CoefROMP</span></a> <span class="impl-info">Smith, Elad</span></div>
                         <div class="impl"><a href="https://papers.nips.cc/paper/2006/hash/2d71b2ae158c7c5912cc0bbde2bb9d95-Abstract.html" target="_blank"><span class="impl-name">Efficient Sparse Coding</span></a> <span class="impl-info">Honglak Lee</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/decomposition/_dict_learning.py" target="_blank"><span class="impl-name">sklearn.decomposition.DictionaryLearning</span></a> <span class="impl-info">scikit-learn &mdash; online + batch</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/fubel/sparselandtools" target="_blank"><span class="impl-name">sparselandtools</span></a> <span class="impl-info">K-SVD, OMP, MP</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/syanga/ksvd-sparse-dictionary" target="_blank"><span class="impl-name">ksvd-sparse-dictionary</span></a> <span class="impl-info">K-SVD + OMP sensing</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/jbhuang0604/SelfSimSR/tree/master/Lib/KSVD" target="_blank"><span class="impl-name">K-SVD Toolbox</span></a> <span class="impl-info">Elad, Aharon original</span> <span class="tag mat">Matlab</span></div>
                     </div>
                 </div>
                 <div class="cat-figure">
@@ -903,6 +922,10 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1108.1911" target="_blank"><span class="impl-name">EM-BG-AMP</span></a> <span class="impl-info">Jeremy Vila</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/0803.2392" target="_blank"><span class="impl-name">SCoSaMP</span></a> <span class="impl-info">Subspace CoSaMP</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/0805.0510" target="_blank"><span class="impl-name">CGIHT / NIHT</span></a> <span class="impl-info">Iterative Hard Thresholding</span></div>
+                        <div class="impl"><a href="https://github.com/Algorithm-and-Toolbox/CS-algorithms" target="_blank"><span class="impl-name">CS-algorithms</span></a> <span class="impl-info">OMP, SP, IHT, CoSaMP, FISTA, ISTA</span> <span class="tag mat">Matlab</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/NLPrinceton/sparse_recovery" target="_blank"><span class="impl-name">sparse_recovery</span></a> <span class="impl-info">BP, OMP, nonnegative variants</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/NeuroFan/Compressive_Sensing_C_and_MATLAB" target="_blank"><span class="impl-name">CS C &amp; MATLAB</span></a> <span class="impl-info">OMP, AMP, IHT</span> <span class="tag mat">Matlab</span> <span class="tag cpp">C++</span></div>
+                        <div class="impl"><a href="https://github.com/jianzhangcs/ISTA-Net-PyTorch" target="_blank"><span class="impl-name">ISTA-Net</span></a> <span class="impl-info">Deep unrolled ISTA</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
                 <div style="display:grid; grid-template-columns: repeat(4, 1fr); gap:1rem; margin-top:1rem;">
@@ -940,6 +963,7 @@
                         <div class="impl"><a href="http://www.tsi.enst.fr/~cardoso/guidesepsou.html" target="_blank"><span class="impl-name">BLISS</span></a> <span class="impl-info">BSS software</span></div>
                         <div class="impl"><a href="https://www.sciencedirect.com/science/article/pii/S0165168406001204" target="_blank"><span class="impl-name">DUET</span></a> <span class="impl-info">Sparse Component</span></div>
                         <div class="impl"><a href="https://www.lx.it.pt/~mtf/MISEP_Toolbox.html" target="_blank"><span class="impl-name">MISEP</span></a> <span class="impl-info">Mutual Information</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/decomposition/_fastica.py" target="_blank"><span class="impl-name">sklearn.decomposition.FastICA</span></a> <span class="impl-info">scikit-learn &mdash; Hyv&auml;rinen &amp; Oja</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
             </div>
@@ -961,6 +985,8 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1312.5663" target="_blank"><span class="impl-name">Sparse AE</span></a> <span class="impl-info">sparsity penalty on hidden units</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1312.6114" target="_blank"><span class="impl-name">&beta;-VAE</span></a> <span class="impl-info">disentangled representations</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1901.05534" target="_blank"><span class="impl-name">VQ-VAE</span></a> <span class="impl-info">discrete latent codes</span></div>
+                        <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/decomposition/_pca.py" target="_blank"><span class="impl-name">sklearn.decomposition.PCA</span></a> <span class="impl-info">scikit-learn &mdash; linear AE equivalent</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://github.com/pytorch/examples/tree/main/vae" target="_blank"><span class="impl-name">PyTorch VAE</span></a> <span class="impl-info">official example</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
             </div>
@@ -984,6 +1010,7 @@
                         <div class="impl"><a href="https://arxiv.org/abs/2110.04366" target="_blank"><span class="impl-name">LoRA-FA</span></a> <span class="impl-info">freeze A, train B only</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2402.09353" target="_blank"><span class="impl-name">GaLore</span></a> <span class="impl-info">gradient low-rank projection</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2307.05695" target="_blank"><span class="impl-name">LoftQ</span></a> <span class="impl-info">quantization-aware LoRA init</span></div>
+                        <div class="impl"><a href="https://github.com/microsoft/LoRA" target="_blank"><span class="impl-name">microsoft/LoRA</span></a> <span class="impl-info">Official loralib &mdash; pip install loralib</span> <span class="tag py">Python</span></div>
                     </div>
                 </div>
             </div>
