Fix: Remove misleading Python tag from Spectral Clustering paper reference

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     <p><strong>Operators:</strong> Random walk, Adjacency, Laplacian, Modularity, Non-Backtracking</p>
                     <div class="impl-grid" style="margin-top:1rem">
                         <div class="impl"><a href="https://theory.stanford.edu/~sergei/papers/kMeansPP-soda.pdf" target="_blank"><span class="impl-name">K-Means++</span></a> <span class="impl-info">Arthur, Vassilvitskii &mdash; improved seeding</span></div>
-                        <div class="impl"><a href="https://papers.nips.cc/paper/2092-on-spectral-clustering-analysis-and-an-algorithm" target="_blank"><span class="impl-name">Spectral Clustering</span></a> <span class="impl-info">Ng, Jordan, Weiss</span> <span class="tag py">Python</span></div>
+                        <div class="impl"><a href="https://papers.nips.cc/paper/2092-on-spectral-clustering-analysis-and-an-algorithm" target="_blank"><span class="impl-name">Spectral Clustering</span></a> <span class="impl-info">Ng, Jordan, Weiss &mdash; paper</span></div>
                         <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/cluster/_kmeans.py" target="_blank"><span class="impl-name">sklearn.cluster.KMeans</span></a> <span class="impl-info">scikit-learn &mdash; KMeans(n_clusters=k)</span> <span class="tag py">Python</span></div>
                         <div class="impl"><a href="https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/cluster/_spectral.py" target="_blank"><span class="impl-name">sklearn.cluster.SpectralClustering</span></a> <span class="impl-info">scikit-learn &mdash; graph Laplacian eigenvectors</span> <span class="tag py">Python</span></div>
                     </div>
