Fix LoRA section links (DoRA, GaLore)

--- a/index.html
+++ b/index.html
@@ -1011,11 +1011,10 @@
                     <div class="impl-grid">
                         <div class="impl"><a href="https://arxiv.org/abs/2106.09685" target="_blank"><span class="impl-name">LoRA</span></a> <span class="impl-info">Hu et al. 2021 &mdash; original paper</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2305.14314" target="_blank"><span class="impl-name">QLoRA</span></a> <span class="impl-info">4-bit quantized + LoRA</span></div>
-                        <div class="impl"><a href="https://arxiv.org/abs/2402.12354" target="_blank"><span class="impl-name">DoRA</span></a> <span class="impl-info">Weight-Decomposed Low-Rank</span></div>
+                        <div class="impl"><a href="https://arxiv.org/abs/2402.09353" target="_blank"><span class="impl-name">DoRA</span></a> <span class="impl-info">Weight-Decomposed Low-Rank ICML 2024</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2303.10512" target="_blank"><span class="impl-name">AdaLoRA</span></a> <span class="impl-info">adaptive rank allocation</span></div>
                         <div class="impl"><a href="https://github.com/huggingface/peft" target="_blank"><span class="impl-name">PEFT</span></a> <span class="impl-info">HuggingFace library</span><span class="stars">20.4k</span> <a href="https://github.com/huggingface/peft" target="_blank" class="tag py">Python</a></div>
-                        <div class="impl"><a href="https://arxiv.org/abs/2110.04366" target="_blank"><span class="impl-name">LoRA-FA</span></a> <span class="impl-info">freeze A, train B only</span></div>
-                        <div class="impl"><a href="https://arxiv.org/abs/2402.09353" target="_blank"><span class="impl-name">GaLore</span></a> <span class="impl-info">gradient low-rank projection</span></div>
+                        <div class="impl"><a href="https://arxiv.org/abs/2403.03507" target="_blank"><span class="impl-name">GaLore</span></a> <span class="impl-info">gradient low-rank projection</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2307.05695" target="_blank"><span class="impl-name">LoftQ</span></a> <span class="impl-info">quantization-aware LoRA init</span></div>
                         <div class="impl"><a href="https://github.com/microsoft/LoRA" target="_blank"><span class="impl-name">microsoft/LoRA</span></a> <span class="impl-info"><a href="https://www.microsoft.com/en-us/research/" target="_blank">Microsoft Research</a> &mdash; pip install loralib</span><span class="stars">13.1k</span> <a href="https://github.com/microsoft/LoRA" target="_blank" class="tag py">Python</a></div>
                     </div>
