Fix graph matching section links (FAQ, GRAMPA)

--- a/index.html
+++ b/index.html
@@ -1085,8 +1085,8 @@
                 <div>
                     <p class="description"><strong>Matrix factorization view:</strong> Given adjacency matrix A of a graph, find unknown permutation matrix X and unknown structure B such that A = XBX<sup>T</sup>. Key constraint: X is a permutation matrix (binary, doubly stochastic). Used for matching nodes across two graphs or recovering hidden structure.</p>
                     <div class="impl-grid" style="margin-top:1rem">
-                        <div class="impl"><a href="https://arxiv.org/abs/1310.3043" target="_blank"><span class="impl-name">FAQ</span></a> <span class="impl-info">Fast Approximate QAP</span></div>
-                        <div class="impl"><a href="https://arxiv.org/abs/1407.2449" target="_blank"><span class="impl-name">GRAMPA</span></a> <span class="impl-info">spectral methods for graph matching</span></div>
+                        <div class="impl"><a href="https://arxiv.org/abs/1112.5507" target="_blank"><span class="impl-name">FAQ</span></a> <span class="impl-info">Vogelstein et al. &mdash; Fast Approximate QAP</span></div>
+                        <div class="impl"><a href="https://arxiv.org/abs/1907.08880" target="_blank"><span class="impl-name">GRAMPA</span></a> <span class="impl-info">Fan et al. &mdash; spectral graph matching</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2110.05686" target="_blank"><span class="impl-name">SGM</span></a> <span class="impl-info">Seeded Graph Matching</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1805.02294" target="_blank"><span class="impl-name">Erd&ouml;s-R&eacute;nyi Phase Transition</span></a> <span class="impl-info">sharp threshold for exact recovery</span></div>
                     </div>
