--- a/index.html
+++ b/index.html
@@ -1430,5 +1430,25 @@
         <p>Compiled by Igor Carron | <a href="https://nuit-blanche.blogspot.com">Nuit Blanche</a></p>
         <p style="margin-top:1rem; opacity:0.8; font-size:0.9rem">A living document tracking the state of the art | Updated January 2025</p>
     </footer>
+
+    <!-- Statcounter code for Matrix Factorization Jungle
+    https://igorcarron.github.io/welcome-to-the-matrix-factorization-jungle/
+    on Google Sites (new) -->
+    <script type="text/javascript">
+    var sc_project=13196972;
+    var sc_invisible=1;
+    var sc_security="68d6eb6e";
+    </script>
+    <script type="text/javascript"
+    src="https://www.statcounter.com/counter/counter.js"
+    async></script>
+    <noscript><div class="statcounter"><a title="Web Analytics"
+    href="https://statcounter.com/" target="_blank"><img
+    class="statcounter"
+    src="https://c.statcounter.com/13196972/0/68d6eb6e/1/"
+    alt="Web Analytics"
+    referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
+
 </body>
 </html>
