Change FMM section tag to Direct solvers/FMM

--- a/index.html
+++ b/index.html
@@ -1367,7 +1367,7 @@
         <section class="category cat-green">
             <div class="cat-header">
                 <h2>Preconditioners &amp; Fast Multipole Methods</h2>
-                <span class="phase-badge">AMP</span>
+                <span class="phase-badge">Direct solvers/FMM</span>
             </div>
             <div class="cat-body with-figure">
                 <div>
